// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`saveAppElement > should execute saveAppElement with basic options 1`] = `
{
  "devicePixelRatio": 2,
  "fileName": "test-element.png",
}
`;

exports[`saveAppElement > should execute saveAppElement with basic options 2`] = `
[
  {
    "browserInstance": {
      "isAndroid": false,
      "isMobile": false,
    },
    "devicePixelRatio": 2,
    "element": {
      "elementId": "test-element",
      "getLocation": [MockFunction spy],
      "getSize": [MockFunction spy],
      "isDisplayed": [MockFunction spy],
      "selector": "#test-element",
    },
    "isIOS": true,
    "resizeDimensions": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
  },
]
`;

exports[`saveAppElement > should execute saveAppElement with basic options 3`] = `
{
  "base64Image": "base64-screenshot-data",
  "enrichedInstanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "folders": {
    "actualFolder": "/test/actual",
    "baselineFolder": "/test/baseline",
    "diffFolder": "/test/diff",
  },
  "instanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "isNativeContext": true,
  "tag": "test-element",
  "wicOptions": {
    "addIOSBezelCorners": false,
    "addressBarShadowPadding": 6,
    "autoElementScroll": true,
    "autoSaveBaseline": false,
    "clearFolder": false,
    "compareOptions": {
      "blockOutSideBar": false,
      "blockOutStatusBar": false,
      "blockOutToolBar": false,
      "createJsonReportFiles": false,
      "diffPixelBoundingBoxProximity": 5,
      "ignoreAlpha": false,
      "ignoreAntialiasing": false,
      "ignoreColors": false,
      "ignoreLess": false,
      "ignoreNothing": false,
      "rawMisMatchPercentage": false,
      "returnAllCompareData": false,
      "saveAboveTolerance": 0,
      "scaleImagesToSameSize": false,
    },
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "enableLegacyScreenshotMethod": false,
    "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
    "fullPageScrollTimeout": 1500,
    "hideScrollBars": true,
    "isHybridApp": false,
    "savePerInstance": true,
    "tabbableOptions": {
      "circle": {
        "backgroundColor": "rgba(255, 0, 0, 0.4)",
        "borderColor": "rgba(255, 0, 0, 1)",
        "borderWidth": 1,
        "fontColor": "rgba(0, 0, 0, 1)",
        "fontFamily": "Arial",
        "fontSize": 10,
        "size": 10,
      },
      "line": {
        "color": "rgba(255, 0, 0, 1)",
        "width": 1,
      },
    },
    "toolBarShadowPadding": 6,
    "userBasedFullPageScreenshot": false,
    "waitForFontsLoaded": true,
  },
}
`;

exports[`saveAppElement > should execute saveAppElement with basic options 4`] = `
{
  "actualFolder": "/path/to/actual",
  "base64Image": "base64-screenshot-data",
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "latest",
    "deviceName": "",
    "devicePixelRatio": 1,
    "formatImageName": "{tag}",
    "isMobile": false,
    "isTestInBrowser": false,
    "logName": "chrome",
    "name": "",
    "platformName": "Windows",
    "platformVersion": "latest",
    "screenHeight": 720,
    "screenWidth": 1366,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "",
    "isMobile": false,
    "savePerInstance": false,
  },
  "isLandscape": false,
  "isNativeContext": true,
  "platformName": "Windows",
}
`;

exports[`saveAppElement > should handle Android device correctly 1`] = `
[
  {
    "browserInstance": {
      "isAndroid": true,
      "isMobile": true,
    },
    "devicePixelRatio": 2,
    "element": {
      "elementId": "test-element",
      "getLocation": [MockFunction spy],
      "getSize": [MockFunction spy],
      "isDisplayed": [MockFunction spy],
      "selector": "#test-element",
    },
    "isIOS": false,
    "resizeDimensions": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
  },
]
`;

exports[`saveAppElement > should handle Android device correctly 2`] = `
{
  "base64Image": "base64-screenshot-data",
  "enrichedInstanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "Pixel 4",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "homeBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 915,
        "width": 412,
      },
      "statusBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": true,
    "isIOS": false,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "Android",
    "platformVersion": "11.0",
  },
  "folders": {
    "actualFolder": "/test/actual",
    "baselineFolder": "/test/baseline",
    "diffFolder": "/test/diff",
  },
  "instanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "Pixel 4",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "homeBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 915,
        "width": 412,
      },
      "statusBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": true,
    "isIOS": false,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "Android",
    "platformVersion": "11.0",
  },
  "isNativeContext": true,
  "tag": "test-element",
  "wicOptions": {
    "addIOSBezelCorners": false,
    "addressBarShadowPadding": 6,
    "autoElementScroll": true,
    "autoSaveBaseline": false,
    "clearFolder": false,
    "compareOptions": {
      "blockOutSideBar": false,
      "blockOutStatusBar": false,
      "blockOutToolBar": false,
      "createJsonReportFiles": false,
      "diffPixelBoundingBoxProximity": 5,
      "ignoreAlpha": false,
      "ignoreAntialiasing": false,
      "ignoreColors": false,
      "ignoreLess": false,
      "ignoreNothing": false,
      "rawMisMatchPercentage": false,
      "returnAllCompareData": false,
      "saveAboveTolerance": 0,
      "scaleImagesToSameSize": false,
    },
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "enableLegacyScreenshotMethod": false,
    "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
    "fullPageScrollTimeout": 1500,
    "hideScrollBars": true,
    "isHybridApp": false,
    "savePerInstance": true,
    "tabbableOptions": {
      "circle": {
        "backgroundColor": "rgba(255, 0, 0, 0.4)",
        "borderColor": "rgba(255, 0, 0, 1)",
        "borderWidth": 1,
        "fontColor": "rgba(0, 0, 0, 1)",
        "fontFamily": "Arial",
        "fontSize": 10,
        "size": 10,
      },
      "line": {
        "color": "rgba(255, 0, 0, 1)",
        "width": 1,
      },
    },
    "toolBarShadowPadding": 6,
    "userBasedFullPageScreenshot": false,
    "waitForFontsLoaded": true,
  },
}
`;

exports[`saveAppElement > should handle Android device correctly 3`] = `
{
  "actualFolder": "/path/to/actual",
  "base64Image": "base64-screenshot-data",
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "latest",
    "deviceName": "",
    "devicePixelRatio": 1,
    "formatImageName": "{tag}",
    "isMobile": false,
    "isTestInBrowser": false,
    "logName": "chrome",
    "name": "",
    "platformName": "Windows",
    "platformVersion": "latest",
    "screenHeight": 720,
    "screenWidth": 1366,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "",
    "isMobile": false,
    "savePerInstance": false,
  },
  "isLandscape": false,
  "isNativeContext": true,
  "platformName": "Windows",
}
`;

exports[`saveAppElement > should handle custom image naming 1`] = `
{
  "base64Image": "base64-screenshot-data",
  "enrichedInstanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "folders": {
    "actualFolder": "/test/actual",
    "baselineFolder": "/test/baseline",
    "diffFolder": "/test/diff",
  },
  "instanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "isNativeContext": true,
  "tag": "custom-element-name",
  "wicOptions": {
    "addIOSBezelCorners": false,
    "addressBarShadowPadding": 6,
    "autoElementScroll": true,
    "autoSaveBaseline": false,
    "clearFolder": false,
    "compareOptions": {
      "blockOutSideBar": false,
      "blockOutStatusBar": false,
      "blockOutToolBar": false,
      "createJsonReportFiles": false,
      "diffPixelBoundingBoxProximity": 5,
      "ignoreAlpha": false,
      "ignoreAntialiasing": false,
      "ignoreColors": false,
      "ignoreLess": false,
      "ignoreNothing": false,
      "rawMisMatchPercentage": false,
      "returnAllCompareData": false,
      "saveAboveTolerance": 0,
      "scaleImagesToSameSize": false,
    },
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "enableLegacyScreenshotMethod": false,
    "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
    "fullPageScrollTimeout": 1500,
    "hideScrollBars": true,
    "isHybridApp": false,
    "savePerInstance": true,
    "tabbableOptions": {
      "circle": {
        "backgroundColor": "rgba(255, 0, 0, 0.4)",
        "borderColor": "rgba(255, 0, 0, 1)",
        "borderWidth": 1,
        "fontColor": "rgba(0, 0, 0, 1)",
        "fontFamily": "Arial",
        "fontSize": 10,
        "size": 10,
      },
      "line": {
        "color": "rgba(255, 0, 0, 1)",
        "width": 1,
      },
    },
    "toolBarShadowPadding": 6,
    "userBasedFullPageScreenshot": false,
    "waitForFontsLoaded": true,
  },
}
`;

exports[`saveAppElement > should handle custom image naming 2`] = `
{
  "actualFolder": "/path/to/actual",
  "base64Image": "base64-screenshot-data",
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "latest",
    "deviceName": "",
    "devicePixelRatio": 1,
    "formatImageName": "{tag}",
    "isMobile": false,
    "isTestInBrowser": false,
    "logName": "chrome",
    "name": "",
    "platformName": "Windows",
    "platformVersion": "latest",
    "screenHeight": 720,
    "screenWidth": 1366,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "",
    "isMobile": false,
    "savePerInstance": false,
  },
  "isLandscape": false,
  "isNativeContext": true,
  "platformName": "Windows",
}
`;

exports[`saveAppElement > should handle custom resize dimensions 1`] = `
[
  {
    "browserInstance": {
      "isAndroid": false,
      "isMobile": false,
    },
    "devicePixelRatio": 2,
    "element": {
      "elementId": "test-element",
      "getLocation": [MockFunction spy],
      "getSize": [MockFunction spy],
      "isDisplayed": [MockFunction spy],
      "selector": "#test-element",
    },
    "isIOS": true,
    "resizeDimensions": {
      "bottom": 30,
      "left": 40,
      "right": 20,
      "top": 10,
    },
  },
]
`;

exports[`saveAppElement > should handle custom resize dimensions 2`] = `
{
  "base64Image": "base64-screenshot-data",
  "enrichedInstanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "folders": {
    "actualFolder": "/test/actual",
    "baselineFolder": "/test/baseline",
    "diffFolder": "/test/diff",
  },
  "instanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "isNativeContext": true,
  "tag": "test-element",
  "wicOptions": {
    "addIOSBezelCorners": false,
    "addressBarShadowPadding": 6,
    "autoElementScroll": true,
    "autoSaveBaseline": false,
    "clearFolder": false,
    "compareOptions": {
      "blockOutSideBar": false,
      "blockOutStatusBar": false,
      "blockOutToolBar": false,
      "createJsonReportFiles": false,
      "diffPixelBoundingBoxProximity": 5,
      "ignoreAlpha": false,
      "ignoreAntialiasing": false,
      "ignoreColors": false,
      "ignoreLess": false,
      "ignoreNothing": false,
      "rawMisMatchPercentage": false,
      "returnAllCompareData": false,
      "saveAboveTolerance": 0,
      "scaleImagesToSameSize": false,
    },
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "enableLegacyScreenshotMethod": false,
    "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
    "fullPageScrollTimeout": 1500,
    "hideScrollBars": true,
    "isHybridApp": false,
    "savePerInstance": true,
    "tabbableOptions": {
      "circle": {
        "backgroundColor": "rgba(255, 0, 0, 0.4)",
        "borderColor": "rgba(255, 0, 0, 1)",
        "borderWidth": 1,
        "fontColor": "rgba(0, 0, 0, 1)",
        "fontFamily": "Arial",
        "fontSize": 10,
        "size": 10,
      },
      "line": {
        "color": "rgba(255, 0, 0, 1)",
        "width": 1,
      },
    },
    "toolBarShadowPadding": 6,
    "userBasedFullPageScreenshot": false,
    "waitForFontsLoaded": true,
  },
}
`;

exports[`saveAppElement > should handle custom resize dimensions 3`] = `
{
  "actualFolder": "/path/to/actual",
  "base64Image": "base64-screenshot-data",
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "latest",
    "deviceName": "",
    "devicePixelRatio": 1,
    "formatImageName": "{tag}",
    "isMobile": false,
    "isTestInBrowser": false,
    "logName": "chrome",
    "name": "",
    "platformName": "Windows",
    "platformVersion": "latest",
    "screenHeight": 720,
    "screenWidth": 1366,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "",
    "isMobile": false,
    "savePerInstance": false,
  },
  "isLandscape": false,
  "isNativeContext": true,
  "platformName": "Windows",
}
`;

exports[`saveAppElement > should handle custom screen sizes 1`] = `
[
  {
    "browserInstance": {
      "isAndroid": false,
      "isMobile": false,
    },
    "devicePixelRatio": 2,
    "element": {
      "elementId": "test-element",
      "getLocation": [MockFunction spy],
      "getSize": [MockFunction spy],
      "isDisplayed": [MockFunction spy],
      "selector": "#test-element",
    },
    "isIOS": true,
    "resizeDimensions": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
  },
]
`;

exports[`saveAppElement > should handle custom screen sizes 2`] = `
{
  "base64Image": "base64-screenshot-data",
  "enrichedInstanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "homeBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 812,
        "width": 375,
      },
      "statusBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "folders": {
    "actualFolder": "/test/actual",
    "baselineFolder": "/test/baseline",
    "diffFolder": "/test/diff",
  },
  "instanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "homeBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 812,
        "width": 375,
      },
      "statusBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "isNativeContext": true,
  "tag": "test-element",
  "wicOptions": {
    "addIOSBezelCorners": false,
    "addressBarShadowPadding": 6,
    "autoElementScroll": true,
    "autoSaveBaseline": false,
    "clearFolder": false,
    "compareOptions": {
      "blockOutSideBar": false,
      "blockOutStatusBar": false,
      "blockOutToolBar": false,
      "createJsonReportFiles": false,
      "diffPixelBoundingBoxProximity": 5,
      "ignoreAlpha": false,
      "ignoreAntialiasing": false,
      "ignoreColors": false,
      "ignoreLess": false,
      "ignoreNothing": false,
      "rawMisMatchPercentage": false,
      "returnAllCompareData": false,
      "saveAboveTolerance": 0,
      "scaleImagesToSameSize": false,
    },
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "enableLegacyScreenshotMethod": false,
    "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
    "fullPageScrollTimeout": 1500,
    "hideScrollBars": true,
    "isHybridApp": false,
    "savePerInstance": true,
    "tabbableOptions": {
      "circle": {
        "backgroundColor": "rgba(255, 0, 0, 0.4)",
        "borderColor": "rgba(255, 0, 0, 1)",
        "borderWidth": 1,
        "fontColor": "rgba(0, 0, 0, 1)",
        "fontFamily": "Arial",
        "fontSize": 10,
        "size": 10,
      },
      "line": {
        "color": "rgba(255, 0, 0, 1)",
        "width": 1,
      },
    },
    "toolBarShadowPadding": 6,
    "userBasedFullPageScreenshot": false,
    "waitForFontsLoaded": true,
  },
}
`;

exports[`saveAppElement > should handle custom screen sizes 3`] = `
{
  "actualFolder": "/path/to/actual",
  "base64Image": "base64-screenshot-data",
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "latest",
    "deviceName": "",
    "devicePixelRatio": 1,
    "formatImageName": "{tag}",
    "isMobile": false,
    "isTestInBrowser": false,
    "logName": "chrome",
    "name": "",
    "platformName": "Windows",
    "platformVersion": "latest",
    "screenHeight": 720,
    "screenWidth": 1366,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "",
    "isMobile": false,
    "savePerInstance": false,
  },
  "isLandscape": false,
  "isNativeContext": true,
  "platformName": "Windows",
}
`;

exports[`saveAppElement > should handle iOS device correctly 1`] = `
[
  {
    "browserInstance": {
      "isAndroid": false,
      "isMobile": true,
    },
    "devicePixelRatio": 2,
    "element": {
      "elementId": "test-element",
      "getLocation": [MockFunction spy],
      "getSize": [MockFunction spy],
      "isDisplayed": [MockFunction spy],
      "selector": "#test-element",
    },
    "isIOS": true,
    "resizeDimensions": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
  },
]
`;

exports[`saveAppElement > should handle iOS device correctly 2`] = `
{
  "base64Image": "base64-screenshot-data",
  "enrichedInstanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 12",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "homeBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "14.0",
  },
  "folders": {
    "actualFolder": "/test/actual",
    "baselineFolder": "/test/baseline",
    "diffFolder": "/test/diff",
  },
  "instanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 12",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "homeBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "14.0",
  },
  "isNativeContext": true,
  "tag": "test-element",
  "wicOptions": {
    "addIOSBezelCorners": false,
    "addressBarShadowPadding": 6,
    "autoElementScroll": true,
    "autoSaveBaseline": false,
    "clearFolder": false,
    "compareOptions": {
      "blockOutSideBar": false,
      "blockOutStatusBar": false,
      "blockOutToolBar": false,
      "createJsonReportFiles": false,
      "diffPixelBoundingBoxProximity": 5,
      "ignoreAlpha": false,
      "ignoreAntialiasing": false,
      "ignoreColors": false,
      "ignoreLess": false,
      "ignoreNothing": false,
      "rawMisMatchPercentage": false,
      "returnAllCompareData": false,
      "saveAboveTolerance": 0,
      "scaleImagesToSameSize": false,
    },
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "enableLegacyScreenshotMethod": false,
    "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
    "fullPageScrollTimeout": 1500,
    "hideScrollBars": true,
    "isHybridApp": false,
    "savePerInstance": true,
    "tabbableOptions": {
      "circle": {
        "backgroundColor": "rgba(255, 0, 0, 0.4)",
        "borderColor": "rgba(255, 0, 0, 1)",
        "borderWidth": 1,
        "fontColor": "rgba(0, 0, 0, 1)",
        "fontFamily": "Arial",
        "fontSize": 10,
        "size": 10,
      },
      "line": {
        "color": "rgba(255, 0, 0, 1)",
        "width": 1,
      },
    },
    "toolBarShadowPadding": 6,
    "userBasedFullPageScreenshot": false,
    "waitForFontsLoaded": true,
  },
}
`;

exports[`saveAppElement > should handle iOS device correctly 3`] = `
{
  "actualFolder": "/path/to/actual",
  "base64Image": "base64-screenshot-data",
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "latest",
    "deviceName": "",
    "devicePixelRatio": 1,
    "formatImageName": "{tag}",
    "isMobile": false,
    "isTestInBrowser": false,
    "logName": "chrome",
    "name": "",
    "platformName": "Windows",
    "platformVersion": "latest",
    "screenHeight": 720,
    "screenWidth": 1366,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "",
    "isMobile": false,
    "savePerInstance": false,
  },
  "isLandscape": false,
  "isNativeContext": true,
  "platformName": "Windows",
}
`;

exports[`saveAppElement > should handle non-native context correctly 1`] = `
[
  {
    "browserInstance": {
      "isAndroid": false,
      "isMobile": false,
    },
    "devicePixelRatio": 2,
    "element": {
      "elementId": "test-element",
      "getLocation": [MockFunction spy],
      "getSize": [MockFunction spy],
      "isDisplayed": [MockFunction spy],
      "selector": "#test-element",
    },
    "isIOS": true,
    "resizeDimensions": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
  },
]
`;

exports[`saveAppElement > should handle non-native context correctly 2`] = `
{
  "base64Image": "base64-screenshot-data",
  "enrichedInstanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "folders": {
    "actualFolder": "/test/actual",
    "baselineFolder": "/test/baseline",
    "diffFolder": "/test/diff",
  },
  "instanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "isNativeContext": false,
  "tag": "test-element",
  "wicOptions": {
    "addIOSBezelCorners": false,
    "addressBarShadowPadding": 6,
    "autoElementScroll": true,
    "autoSaveBaseline": false,
    "clearFolder": false,
    "compareOptions": {
      "blockOutSideBar": false,
      "blockOutStatusBar": false,
      "blockOutToolBar": false,
      "createJsonReportFiles": false,
      "diffPixelBoundingBoxProximity": 5,
      "ignoreAlpha": false,
      "ignoreAntialiasing": false,
      "ignoreColors": false,
      "ignoreLess": false,
      "ignoreNothing": false,
      "rawMisMatchPercentage": false,
      "returnAllCompareData": false,
      "saveAboveTolerance": 0,
      "scaleImagesToSameSize": false,
    },
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "enableLegacyScreenshotMethod": false,
    "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
    "fullPageScrollTimeout": 1500,
    "hideScrollBars": true,
    "isHybridApp": false,
    "savePerInstance": true,
    "tabbableOptions": {
      "circle": {
        "backgroundColor": "rgba(255, 0, 0, 0.4)",
        "borderColor": "rgba(255, 0, 0, 1)",
        "borderWidth": 1,
        "fontColor": "rgba(0, 0, 0, 1)",
        "fontFamily": "Arial",
        "fontSize": 10,
        "size": 10,
      },
      "line": {
        "color": "rgba(255, 0, 0, 1)",
        "width": 1,
      },
    },
    "toolBarShadowPadding": 6,
    "userBasedFullPageScreenshot": false,
    "waitForFontsLoaded": true,
  },
}
`;

exports[`saveAppElement > should handle non-native context correctly 3`] = `
{
  "actualFolder": "/path/to/actual",
  "base64Image": "base64-screenshot-data",
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "latest",
    "deviceName": "",
    "devicePixelRatio": 1,
    "formatImageName": "{tag}",
    "isMobile": false,
    "isTestInBrowser": false,
    "logName": "chrome",
    "name": "",
    "platformName": "Windows",
    "platformVersion": "latest",
    "screenHeight": 720,
    "screenWidth": 1366,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "",
    "isMobile": false,
    "savePerInstance": false,
  },
  "isLandscape": false,
  "isNativeContext": true,
  "platformName": "Windows",
}
`;

exports[`saveAppElement > should handle save per instance 1`] = `
{
  "base64Image": "base64-screenshot-data",
  "enrichedInstanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "folders": {
    "actualFolder": "/test/actual",
    "baselineFolder": "/test/baseline",
    "diffFolder": "/test/diff",
  },
  "instanceData": {
    "appName": "TestApp",
    "browserName": "Chrome",
    "browserVersion": "118.0.0.0",
    "deviceName": "iPhone 14",
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "initialDevicePixelRatio": 2,
    "isAndroid": false,
    "isIOS": true,
    "isMobile": true,
    "logName": "test-log",
    "name": "test-device",
    "nativeWebScreenshot": false,
    "platformName": "iOS",
    "platformVersion": "17.0",
  },
  "isNativeContext": true,
  "tag": "test-element",
  "wicOptions": {
    "addIOSBezelCorners": false,
    "addressBarShadowPadding": 6,
    "autoElementScroll": true,
    "autoSaveBaseline": false,
    "clearFolder": false,
    "compareOptions": {
      "blockOutSideBar": false,
      "blockOutStatusBar": false,
      "blockOutToolBar": false,
      "createJsonReportFiles": false,
      "diffPixelBoundingBoxProximity": 5,
      "ignoreAlpha": false,
      "ignoreAntialiasing": false,
      "ignoreColors": false,
      "ignoreLess": false,
      "ignoreNothing": false,
      "rawMisMatchPercentage": false,
      "returnAllCompareData": false,
      "saveAboveTolerance": 0,
      "scaleImagesToSameSize": false,
    },
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "enableLegacyScreenshotMethod": false,
    "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
    "fullPageScrollTimeout": 1500,
    "hideScrollBars": true,
    "isHybridApp": false,
    "savePerInstance": true,
    "tabbableOptions": {
      "circle": {
        "backgroundColor": "rgba(255, 0, 0, 0.4)",
        "borderColor": "rgba(255, 0, 0, 1)",
        "borderWidth": 1,
        "fontColor": "rgba(0, 0, 0, 1)",
        "fontFamily": "Arial",
        "fontSize": 10,
        "size": 10,
      },
      "line": {
        "color": "rgba(255, 0, 0, 1)",
        "width": 1,
      },
    },
    "toolBarShadowPadding": 6,
    "userBasedFullPageScreenshot": false,
    "waitForFontsLoaded": true,
  },
}
`;

exports[`saveAppElement > should handle save per instance 2`] = `
{
  "actualFolder": "/path/to/actual",
  "base64Image": "base64-screenshot-data",
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "latest",
    "deviceName": "",
    "devicePixelRatio": 1,
    "formatImageName": "{tag}",
    "isMobile": false,
    "isTestInBrowser": false,
    "logName": "chrome",
    "name": "",
    "platformName": "Windows",
    "platformVersion": "latest",
    "screenHeight": 720,
    "screenWidth": 1366,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "",
    "isMobile": false,
    "savePerInstance": false,
  },
  "isLandscape": false,
  "isNativeContext": true,
  "platformName": "Windows",
}
`;
